# CRIME-RECORD

./: README.md  analytics_dashboard.py  app.py  app_working.py  auth.py  complaint_search.py  crime_records.db  database.py  dummyd.py  evidence_handler.py  legal_database.py  legaldb.py  pdf_generator.py  pyproject.toml  severity_classifier.py
attached_assets/: README_1758639584071.md  auth_1758639584062.py  crime_records_1758639584065.db  database_1758639584067.py  indian_legal_documents_1758639584067.db  legal_database_1758639584068.py  legaldb_1758639584069.py  pdf_generator_1758639584070.py  severity_classifier_1758639584072.py
