[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "folium>=0.20.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "streamlit-folium>=0.25.2",
    "streamlit>=1.49.1",
]
